# jira-cli

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATE.md  build.rs  cicd-setup.md  deny.toml  install.sh  reference-manifest.yaml  regression-state.json  sidecar-learning.md  spec-changelog.md  sprint-state.yaml
.cargo/: mutants.toml
.github/: CODEOWNERS  dependabot.yml  local-workflows.txt
architecture/: README.md  adr-index.md  component-graph.md  cross-cutting.md  dtu-assessment.md  risk-register.md  state-machines.md  system-overview.md
logs/: dispatcher-internal-2026-05-04.jsonl  events-2026-05-04.jsonl
phase-f1-delta-analysis/: affected-artifacts.md  affected-files-345.txt  affected-files-384.txt  affected-files-385.txt  affected-files-407.txt  affected-files-410.txt  architect-input-345.md  business-analyst-input-345.md  delta-analysis-345.md  delta-analysis-384.md  delta-analysis-385.md
phase-f2-spec-evolution/: adversarial-407-pass-1.md  adversarial-407-pass-2.md  adversarial-407-pass-3.md  adversarial-407-pass-4.md  consistency-audit-407.md  prd-delta-384.md  prd-delta-385.md  prd-delta-388.md  prd-delta-396.md  prd-delta-398.md  prd-delta-407.md  prd-delta.md  verification-delta-388.md  verification-delta-398.md  verification-delta.md
phase-f6-hardening/: fuzz-results.md  issue-396-summary.md  issue-398-summary.md  kani-results.md  mutation-results.md  security-scan-results.md  summary.md
phase-f7-convergence/: delta-convergence-report.md  issue-396-delta-convergence-report.md  issue-396-traceability-chain-delta.md  issue-398-delta-convergence-report.md  issue-398-traceability-chain-delta.md  traceability-chain-delta.md
planning/: brainstorming-report.md
proptest-regressions/: jql.txt
research/: S-3.03-v2-design-verification.md  S-3.03-wave3-verification.md  S-3.04-wave3-verification.md  S-3.05-wave3-verification.md  S-3.07-wave3-verification.md  S-3.08-wave3-verification.md  S-3.09-wave3-verification.md  S-3.10-wave3-verification.md  copilot-pr-411-round1.md  e2e-priority-assign-worklog.md  follow-up-validation-396.md  issue-110-bulk-operations.md  issue-210-macos-signing-notarize.md  issue-284-no-parent-flag.md  issue-288-jsm-request-types.md  issue-288-pr4-deferred-validation.md  issue-288-pr4-retrospective-audit.md  issue-331-issuetype-bulk-schema.md  issue-365-design-validation.md  issue-383-deferred-followups-validation.md  issue-388-subtask-conversion.md  issue-398-copilot-uuid-echo-finding.md  issue-398-field-echo-conventions.md  jr-label-edit-400.md  pr-393-copilot-validation.md  wave-2-gate-decisions-research.md
scripts/: check-bc-cumulative-counts.sh  check-bc-no-numeric-test-counts.sh  check-spec-counts.sh
specs/: phase-1-consistency-audit-r2.md  phase-1-consistency-audit.md
src/: adf.rs  cache.rs  config.rs  duration.rs  error.rs  jql.rs  lib.rs  main.rs  observability.rs  output.rs  partial_match.rs
stories/: S-382-error-insufficient-scope-refactor.md  S-384-jsm-401-auth-aware-hints.md  S-385-jsm-input-validation-ux-polish.md  (+15 more)
(+1024 files in other folders)
