[package]
name = "jr"
version = "0.5.0-dev.1"
edition = "2024"
description = "A fast CLI for Jira Cloud"
repository = "https://github.com/Zious11/jira-cli"
rust-version = "1.85"
license = "MIT"

[[bin]]
name = "jr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
comfy-table = "7"
dialoguer = "0.12"
dirs = "6"
figment = { version = "0.10", features = ["toml", "env"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
urlencoding = "2"
pulldown-cmark = { version = "0.13", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
