[package]
name = "jr"
version = "0.5.0-dev.13"
edition = "2024"
description = "A fast CLI for Jira Cloud"
repository = "https://github.com/Zious11/jira-cli"
rust-version = "1.85"
license = "MIT"

[[bin]]
name = "jr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
comfy-table = "7"
dialoguer = "0.12"
dirs = "6"
figment = { version = "0.10", features = ["toml", "env"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
rand = "0.10"
urlencoding = "2"
url = "2"
pulldown-cmark = { version = "0.13", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
proptest = "1"
# test-util enables tokio::time::pause() + start_paused = true for S-3.07 AC-001/AC-002
tokio = { version = "1", features = ["test-util"] }
# temp-env: scoped env-var overrides for cache-isolation tests (H-2 / S-396)
temp-env = "0.3"
# scopeguard: defer! for cleanup-on-panic in integration tests (L-7 / S-396)
scopeguard = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
